--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,53 @@
-## Directories created by Ant build file
-build/
-db/
-distr/
-junit/
-logs/
-publish/
-repos/
-derby.log
+## Compiled ##
+*.exe
+*.dll
 
-## Java Compiled/Package Files##
-*.class
-*.jar
-*.war
-*.ear
+## Visual Studio files ##
+*.[Oo]bj
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.sdf
+*.opensdf
+*.unsuccessfulbuild
+ipch/
+obj/
+[Bb]in
+[Dd]ebug*/
+[Rr]elease*/
+[Bb]uild/
+Ankh.NoLoad
+*.webinfo
+__MVC_BACKUP/
+UpgradeLog.XML
+_UpgradeReport_Files/
 
-## Eclipse Files ##
-.metadata/
-.settings/
-.externalToolBuilders/
-bin/
-*.launch
-local.properties
-
-## Maven Files ##
-target/
+## Tooling ##
+_ReSharper*/
+*.resharper
+[Tt]est[Rr]esult*
+packages/
 
 ## Temp Files##
-tmp/
-*.bak
 *.tmp
 *.swp
 ~$*
-*~
 [Tt]humbs.db
 *.DS_Store
 
 ## Subversion files ##
 .svn
-
