Removed obj and bin folders

--- a/VersionOne.ServiceHost/App.config
+++ b/VersionOne.ServiceHost/App.config
@@ -34,7 +34,7 @@
 
     <!-- Timer that flushes Profile periodically -->
     <ProfileFlushTimer class="VersionOne.ServiceHost.Core.Services.TimePublisherService,VersionOne.ServiceHost.Core">
-      <Interval>5000</Interval>
+      <Interval>1000</Interval>
       <PublishClass>VersionOne.ServiceHost.CommonMode+FlushProfile,VersionOne.ServiceHost.Core</PublishClass>
     </ProfileFlushTimer>
 
@@ -42,9 +42,9 @@
     <JiraService disabled="0" class="VersionOne.ServiceHost.JiraServices.JiraHostedService, VersionOne.ServiceHost.JiraServices">
       
       <!-- JIRA Connectivity -->
-      <JIRAUrl>http://{server}/rpc/soap/jirasoapservice-v2</JIRAUrl>
-      <JIRAUserName></JIRAUserName>
-      <JIRAPassword></JIRAPassword>
+      <JIRAUrl>http://jira-6.cloudapp.net:8080/rpc/soap/jirasoapservice-v2</JIRAUrl>
+      <JIRAUserName>admin</JIRAUserName>
+      <JIRAPassword>admin</JIRAPassword>
 
       <CreateDefectFilter disabled="0" id="10101"/>     <!--Id of the filter used to find issues that need to have defects created-->
       <CreateStoryFilter disabled="0" id="10102"/>      <!--Id of the filter used to find issues that need to have stories created-->
@@ -99,7 +99,7 @@
 
     <!-- Jira Poll Timer -->
     <JiraServiceTimer disabled="0" class="VersionOne.ServiceHost.Core.Services.TimePublisherService, VersionOne.ServiceHost.Core">
-      <Interval>10000</Interval>
+      <Interval>2000</Interval>
       <PublishClass>VersionOne.ServiceHost.JiraServices.JiraHostedService+IntervalSync, VersionOne.ServiceHost.JiraServices</PublishClass>
     </JiraServiceTimer>
 
@@ -108,9 +108,9 @@
       <!-- VersionOne field used to hold the Jira Issue identifier.  This can be any text field, including custom fields. -->
       <ExternalIdFieldName>Reference</ExternalIdFieldName>
       <Settings>
-        <ApplicationUrl>https://{server}/{instance}/</ApplicationUrl>
-        <Username></Username>
-        <Password></Password>
+        <ApplicationUrl>https://www11.v1host.com/V1Integrations</ApplicationUrl>
+        <Username>admin</Username>
+        <Password>admin1234</Password>
         <APIVersion>7.2.0.0</APIVersion>
         <IntegratedAuth>false</IntegratedAuth>
         <ProxySettings disabled="1">
