--- a/VersionOne.ServiceHost/App.config
+++ b/VersionOne.ServiceHost/App.config
@@ -43,8 +43,8 @@
       
       <!-- JIRA Connectivity -->
       <JIRAUrl>http://jira-6.cloudapp.net:8080/rpc/soap/jirasoapservice-v2</JIRAUrl>
-      <JIRAUserName></JIRAUserName>
-      <JIRAPassword></JIRAPassword>
+      <JIRAUserName>admin</JIRAUserName>
+      <JIRAPassword>admin</JIRAPassword>
 
       <CreateDefectFilter disabled="0" id="10101"/>     <!--Id of the filter used to find issues that need to have defects created-->
       <CreateStoryFilter disabled="0" id="10102"/>      <!--Id of the filter used to find issues that need to have stories created-->
@@ -109,8 +109,8 @@
       <ExternalIdFieldName>Reference</ExternalIdFieldName>
       <Settings>
         <ApplicationUrl>https://www11.v1host.com/V1Integrations</ApplicationUrl>
-        <Username></Username>
-        <Password></Password>
+        <Username>admin</Username>
+        <Password>admin1234</Password>
         <APIVersion>7.2.0.0</APIVersion>
         <IntegratedAuth>false</IntegratedAuth>
         <ProxySettings disabled="1">
