Added REST proxy class

--- a/VersionOne.JiraConnector/VersionOne.JiraConnector.csproj
+++ b/VersionOne.JiraConnector/VersionOne.JiraConnector.csproj
@@ -72,12 +72,20 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\RestSharp.105.0.1\lib\net4\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -91,6 +99,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="JiraConnectorFactory.cs" />
     <Compile Include="JiraConnectorType.cs" />
+    <Compile Include="Rest\JiraRestProxy.cs" />
     <Compile Include="Soap\JiraSoapProxy.cs" />
     <Compile Include="Soap\JiraSoapService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
