--- a/VersionOne.ServiceHost/App.config
+++ b/VersionOne.ServiceHost/App.config
@@ -42,12 +42,12 @@
     <JiraService disabled="0" class="VersionOne.ServiceHost.JiraServices.JiraHostedService, VersionOne.ServiceHost.JiraServices">
       
       <!-- JIRA Connectivity -->
-      <JIRAUrl>http://jira-6.cloudapp.net:8080/rpc/soap/jirasoapservice-v2</JIRAUrl>
+      <JIRAUrl>http://jira-64.cloudapp.net:8080/rest/api/latest</JIRAUrl>
       <JIRAUserName>admin</JIRAUserName>
       <JIRAPassword>admin</JIRAPassword>
 
-      <CreateDefectFilter disabled="0" id="10101"/>     <!--Id of the filter used to find issues that need to have defects created-->
-      <CreateStoryFilter disabled="0" id="10102"/>      <!--Id of the filter used to find issues that need to have stories created-->
+      <CreateDefectFilter disabled="0" id="10300"/>     <!--Id of the filter used to find issues that need to have defects created-->
+      <CreateStoryFilter disabled="0" id="10200"/>      <!--Id of the filter used to find issues that need to have stories created-->
 
       <!-- Fields to update to prevent creating multiple Workitems in VersionOne -->
       <!-- Not all of these fields are required, consult the documentation on how to set them -->
@@ -55,12 +55,12 @@
       <CreateFieldValue>Open</CreateFieldValue>         <!-- Value to set in CreateFieldId -->
       <CloseFieldId>customfield_10001</CloseFieldId>    <!-- ID of JIRA field to update when a V1 defect is closed -->
       <CloseFieldValue>Closed</CloseFieldValue>         <!-- Value to set in CloseFieldId -->
-      <ProgressWorkflow>21</ProgressWorkflow>            <!-- ID of JIRA Transition to set after a V1 defect is created -->
-      <ProgressWorkflowClosed>31</ProgressWorkflowClosed><!-- ID of JIRA Transition to set after a V1 defect is closed -->
+      <ProgressWorkflow>11</ProgressWorkflow>            <!-- ID of JIRA Transition to set after a V1 defect is created -->
+      <ProgressWorkflowClosed>21</ProgressWorkflowClosed><!-- ID of JIRA Transition to set after a V1 defect is closed -->
       <AssigneeStateChanged>-1</AssigneeStateChanged>   <!-- Name to set the assignee to field to when a V1 defect is closed (optional) Note: In JIRA 3.10.2 a value of -1 caused 'Automatic' assignment -->
 
       <!-- These elements are used to create a link in VersionOne to JIRA issue (we replace #key# with JIRA Issue id) -->
-      <JIRAIssueUrlTemplate>http://jira-6.cloudapp.net:8080/browse/#key#</JIRAIssueUrlTemplate>
+      <JIRAIssueUrlTemplate>http://jira-64.cloudapp.net:8080/browse/#key#</JIRAIssueUrlTemplate>
       <JIRAIssueUrlTitle>JIRA</JIRAIssueUrlTitle>
 
       <!-- What to set the 'Source' field to. Make sure this value exists in VersionOne. -->
@@ -72,7 +72,7 @@
       <!-- Mapping for projects from JIRA to VersionOne -->
       <ProjectMappings>
         <Mapping>
-          <JIRAProject>ScrumTest</JIRAProject>
+          <JIRAProject>JIRA Integration Test</JIRAProject>
           <VersionOneProject id="Scope:6991"></VersionOneProject>
         </Mapping>
       </ProjectMappings>
@@ -99,7 +99,7 @@
 
     <!-- Jira Poll Timer -->
     <JiraServiceTimer disabled="0" class="VersionOne.ServiceHost.Core.Services.TimePublisherService, VersionOne.ServiceHost.Core">
-      <Interval>2000</Interval>
+      <Interval>5000</Interval>
       <PublishClass>VersionOne.ServiceHost.JiraServices.JiraHostedService+IntervalSync, VersionOne.ServiceHost.JiraServices</PublishClass>
     </JiraServiceTimer>
 
