Updated code comments

--- a/VersionOne.ServiceHost/App.config
+++ b/VersionOne.ServiceHost/App.config
@@ -46,18 +46,18 @@
       <JIRAUserName>admin</JIRAUserName>
       <JIRAPassword>admin</JIRAPassword>
 
-      <CreateDefectFilter disabled="0" id="10300"/>     <!--Id of the filter used to find issues that need to have defects created-->
-      <CreateStoryFilter disabled="0" id="10200"/>      <!--Id of the filter used to find issues that need to have stories created-->
+      <CreateDefectFilter disabled="0" id="10300"/>     <!--Id of the filter used to find issues to be created as V1 defects -->
+      <CreateStoryFilter disabled="0" id="10200"/>      <!--Id of the filter used to find issues to be created as V1 stories -->
 
-      <!-- Fields to update to prevent creating multiple Workitems in VersionOne -->
+      <!-- Fields to update to prevent creating multiple workitems in V1 -->
       <!-- Not all of these fields are required, consult the documentation on how to set them -->
-      <CreateFieldId>customfield_10001</CreateFieldId>  <!-- ID of JIRA field to update when a V1 defect is created -->
+      <CreateFieldId>customfield_10001</CreateFieldId>  <!-- ID of JIRA field to update when a V1 workitem is created -->
       <CreateFieldValue>Open</CreateFieldValue>         <!-- Value to set in CreateFieldId -->
-      <CloseFieldId>customfield_10001</CloseFieldId>    <!-- ID of JIRA field to update when a V1 defect is closed -->
+      <CloseFieldId>customfield_10001</CloseFieldId>    <!-- ID of JIRA field to update when a V1 workitem is closed -->
       <CloseFieldValue>Closed</CloseFieldValue>         <!-- Value to set in CloseFieldId -->
-      <ProgressWorkflow>11</ProgressWorkflow>            <!-- ID of JIRA Transition to set after a V1 defect is created -->
-      <ProgressWorkflowClosed>21</ProgressWorkflowClosed><!-- ID of JIRA Transition to set after a V1 defect is closed -->
-      <AssigneeStateChanged>-1</AssigneeStateChanged>   <!-- Name to set the assignee to field to when a V1 defect is closed (optional) Note: In JIRA 3.10.2 a value of -1 caused 'Automatic' assignment -->
+      <ProgressWorkflow>11</ProgressWorkflow>            <!-- ID of JIRA status to set after a V1 workitem is created -->
+      <ProgressWorkflowClosed>151</ProgressWorkflowClosed><!-- ID of JIRA status to set after a V1 workitem is closed -->
+      <AssigneeStateChanged>-1</AssigneeStateChanged>   <!-- Name to set the assignee to field to when a V1 workitem is closed (optional) Note: In JIRA 3.10.2 a value of -1 caused 'Automatic' assignment -->
 
       <!-- These elements are used to create a link in VersionOne to JIRA issue (we replace #key# with JIRA Issue id) -->
       <JIRAIssueUrlTemplate>http://jira-64.cloudapp.net:8080/browse/#key#</JIRAIssueUrlTemplate>
