--- a/VersionOne.ServiceHost/App.config
+++ b/VersionOne.ServiceHost/App.config
@@ -6,6 +6,11 @@
     <section name="Services" type="VersionOne.ServiceHost.ServicesConfigurationHandler,VersionOne.ServiceHost.Core"/>
   </configSections>
 
+  <appSettings>
+    <add key="Debug" value="false"/>
+    <add key="DebugFileName" value="C:\temp\VersionOneAPIClientDebug.txt"/>
+  </appSettings>
+
   <Installer>
     <ShortName>V1JIRA</ShortName>
     <LongName>VersionOne Integration for JIRA</LongName>
@@ -40,24 +45,33 @@
 
     <!-- Configuration for JIRA Service -->
     <JiraService disabled="0" class="VersionOne.ServiceHost.JiraServices.JiraHostedService, VersionOne.ServiceHost.JiraServices">
-      
+
       <!-- JIRA Connectivity -->
       <JIRAUrl>http://jira-64.cloudapp.net:8080/rest/api/latest</JIRAUrl>
       <JIRAUserName>admin</JIRAUserName>
       <JIRAPassword>admin</JIRAPassword>
 
-      <CreateDefectFilter disabled="0" id="10300"/>     <!--Id of the filter used to find issues to be created as V1 defects -->
-      <CreateStoryFilter disabled="0" id="10200"/>      <!--Id of the filter used to find issues to be created as V1 stories -->
+      <CreateDefectFilter disabled="0" id="10300"/>
+      <!--Id of the filter used to find issues to be created as V1 defects -->
+      <CreateStoryFilter disabled="0" id="10200"/>
+      <!--Id of the filter used to find issues to be created as V1 stories -->
 
       <!-- Fields to update to prevent creating multiple workitems in V1 -->
       <!-- Not all of these fields are required, consult the documentation on how to set them -->
-      <CreateFieldId>customfield_10000</CreateFieldId>  <!-- ID of JIRA field to update when a V1 workitem is created -->
-      <CreateFieldValue>Open</CreateFieldValue>         <!-- Value to set in CreateFieldId -->
-      <CloseFieldId>customfield_10000</CloseFieldId>    <!-- ID of JIRA field to update when a V1 workitem is closed -->
-      <CloseFieldValue>Closed</CloseFieldValue>         <!-- Value to set in CloseFieldId -->
-      <ProgressWorkflow>11</ProgressWorkflow>            <!-- ID of JIRA status to set after a V1 workitem is created -->
-      <ProgressWorkflowClosed>151</ProgressWorkflowClosed><!-- ID of JIRA status to set after a V1 workitem is closed -->
-      <AssigneeStateChanged>-1</AssigneeStateChanged>   <!-- Name to set the assignee to field to when a V1 workitem is closed (optional) Note: In JIRA 3.10.2 a value of -1 caused 'Automatic' assignment -->
+      <CreateFieldId>customfield_10000</CreateFieldId>
+      <!-- ID of JIRA field to update when a V1 workitem is created -->
+      <CreateFieldValue>Open</CreateFieldValue>
+      <!-- Value to set in CreateFieldId -->
+      <CloseFieldId>customfield_10000</CloseFieldId>
+      <!-- ID of JIRA field to update when a V1 workitem is closed -->
+      <CloseFieldValue>Closed</CloseFieldValue>
+      <!-- Value to set in CloseFieldId -->
+      <ProgressWorkflow>11</ProgressWorkflow>
+      <!-- ID of JIRA status to set after a V1 workitem is created -->
+      <ProgressWorkflowClosed>151</ProgressWorkflowClosed>
+      <!-- ID of JIRA status to set after a V1 workitem is closed -->
+      <AssigneeStateChanged>-1</AssigneeStateChanged>
+      <!-- Name to set the assignee to field to when a V1 workitem is closed (optional) Note: In JIRA 3.10.2 a value of -1 caused 'Automatic' assignment -->
 
       <!-- These elements are used to create a link in VersionOne to JIRA issue (we replace #key# with JIRA Issue id) -->
       <JIRAIssueUrlTemplate>http://jira-64.cloudapp.net:8080/browse/#key#</JIRAIssueUrlTemplate>
@@ -108,7 +122,8 @@
       <!-- VersionOne field used to hold the Jira Issue identifier.  This can be any text field, including custom fields. -->
       <ExternalIdFieldName>Reference</ExternalIdFieldName>
       <Settings>
-        <AuthenticationType>0</AuthenticationType> <!--0 = AccessToken, 1 = Basic, 2 = Integrated, 3 = Integrated with username and password-->
+        <AuthenticationType>0</AuthenticationType>
+        <!--0 = AccessToken, 1 = Basic, 2 = Integrated, 3 = Integrated with username and password-->
         <ApplicationUrl>https://www11.v1host.com/V1Integrations</ApplicationUrl>
         <AccessToken>1.DxVCpH5EiM1MszZq255gBrj15R0=</AccessToken>
         <Username>admin</Username>
@@ -125,4 +140,7 @@
 
   </Services>
 
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
+  </startup>
+</configuration>
