--- a/TFSDocs.csproj
+++ b/TFSDocs.csproj
@@ -66,6 +66,9 @@
     <Content Include="images\information.gif" />
     <Content Include="images\warning.gif" />
     <Content Include="index.html" />
+    <Content Include="screenshots\Config_JIRASettings.png" />
+    <Content Include="screenshots\Config_Mappings.png" />
+    <Content Include="screenshots\Config_V1Workitems.png" />
     <Content Include="screenshots\EnableJIRARPC.png" />
     <Content Include="screenshots\JIRAConnection.png" />
     <Content Include="screenshots\JIRACustomField.png" />
@@ -79,12 +82,16 @@
     <Content Include="screenshots\StorySource.png" />
     <Content Include="screenshots\TypeAndStatusFilter.png" />
     <Content Include="screenshots\UserFilter.png" />
+    <Content Include="screenshots\V1_StorySource.png" />
     <Content Include="screenshots\VersionOneConnection.png" />
     <Content Include="screenshots\WorkitemsConfig.png" />
     <Content Include="scripts\jquery.fancybox.js" />
     <Content Include="styles\help.css" />
     <Content Include="styles\jquery.fancybox.css" />
     <Content Include="styles\pygments_style.css" />
+    <Content Include="thumbnails\config_jirasettings.png" />
+    <Content Include="thumbnails\config_mappings.png" />
+    <Content Include="thumbnails\config_v1workitems.png" />
     <Content Include="thumbnails\enablejirarpc.png" />
     <Content Include="thumbnails\jiraconnection.png" />
     <Content Include="thumbnails\jiracustomfield.png" />
@@ -98,6 +105,7 @@
     <Content Include="thumbnails\storysource.png" />
     <Content Include="thumbnails\typeandstatusfilter.png" />
     <Content Include="thumbnails\userfilter.png" />
+    <Content Include="thumbnails\v1_storysource.png" />
     <Content Include="thumbnails\versiononeconnection.png" />
     <Content Include="thumbnails\workitemsconfig.png" />
     <Content Include="Web.config" />
