--- a/VersionOne.ServiceHost.ConfigurationTool/VersionOne.ServiceHost.ConfigurationTool.csproj
+++ b/VersionOne.ServiceHost.ConfigurationTool/VersionOne.ServiceHost.ConfigurationTool.csproj
@@ -93,6 +93,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -104,6 +107,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="VersionOne.SDK.APIClient">
       <HintPath>..\packages\VersionOne.SDK.APIClient.15.0.0.0\lib\net451\VersionOne.SDK.APIClient.dll</HintPath>
+    </Reference>
+    <Reference Include="VersionOne.ServiceHost.Core">
+      <HintPath>..\packages\VersionOne.ServiceHost.Core.2.0.0.0\lib\net451\VersionOne.ServiceHost.Core.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -281,10 +287,6 @@
     <ProjectReference Include="..\VersionOne.ServerConnector\VersionOne.ServerConnector.csproj">
       <Project>{19A13CA5-7461-4453-8A5E-9C5A7A55C4D5}</Project>
       <Name>VersionOne.ServerConnector</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VersionOne.ServiceHost.Core\VersionOne.ServiceHost.Core.csproj">
-      <Project>{F432BAC8-27ED-4C2C-8E06-EF806A5B0D79}</Project>
-      <Name>VersionOne.ServiceHost.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\VersionOne.ServiceHost.JiraServices\VersionOne.ServiceHost.JiraServices.csproj">
       <Project>{7CFCE842-CC70-4902-AB69-2A87EFE354BE}</Project>
