--- a/VersionOne.ServiceHost.JiraServices.Tests/packages.config
+++ b/VersionOne.ServiceHost.JiraServices.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net451" />
   <package id="VersionOne.SDK.APIClient" version="15.0.0.0" targetFramework="net451" />
   <package id="VersionOne.ServiceHost.Core" version="2.0.0.0" targetFramework="net451" />
 </packages>
