--- a/VersionOne.ServiceHost/packages.config
+++ b/VersionOne.ServiceHost/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
-  <package id="RestSharp" version="105.0.1" targetFramework="net451" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="VersionOne.SDK.APIClient" version="15.0.0.0" targetFramework="net451" />
+  <package id="VersionOne.ServiceHost.Core" version="2.0.0.0" targetFramework="net451" />
 </packages>
