--- a/VersionOne.ServiceHost.WorkitemServices/packages.config
+++ b/VersionOne.ServiceHost.WorkitemServices/packages.config
@@ -5,4 +5,5 @@
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="VersionOne.SDK.APIClient" version="15.0.0.0" targetFramework="net451" />
   <package id="VersionOne.ServiceHost.Core" version="2.0.0.0" targetFramework="net451" />
+  <package id="VersionOne.ServiceHost.ServerConnector" version="2.0.0.0" targetFramework="net451" />
 </packages>
